demo.zero.downtime.sb/platform/k8s/04_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zero-down-sb
spec:
  rules:
  - host: sb.zero.down.com
    http:
      paths:
      - backend:
          serviceName: zero-down-sb
          servicePort: http
        path: /hello
